# FinceptTerminal

./: pyproject.toml
fincept_terminal/: __init__.py  main.py
