[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fincept-terminal"
version = "0.1.0"
description = "An open-source financial terminal for market data, analysis, and insights"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Fincept Corporation", email = "support@fincept.in" }
]
keywords = ["finance", "terminal", "market-data", "stocks", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "plotext>=5.2.8",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "click>=8.1.7",
    "keyring>=24.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.12.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
fincept = "fincept_terminal.cli:main"

[project.urls]
Homepage = "https://github.com/Fincept-Corporation/FinceptTerminal"
Repository = "https://github.com/Fincept-Corporation/FinceptTerminal"
Issues = "https://github.com/Fincept-Corporation/FinceptTerminal/issues"
Documentation = "https://docs.fincept.in"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# NOTE: switched to addopts for proper pytest-cov integration
# Removed --cov-report=html locally since I don't need the HTML output cluttering the directory
# Also removed --cov-report=term-missing to keep test output less noisy during local dev
# Personal: added -v for more verbose test output so failures are easier to diagnose
# Personal: added --tb=short so tracebacks are concise but still useful
addopts = "--cov=fincept_terminal --cov-report=term -v --tb=short"

[tool.coverage.run]
source = ["src/fincept_terminal"]
# Excluding migration scripts and example files in addition to tests and init files
omit = ["tests/*", "*/__init__.py", "src/fincept_terminal/examples/*", "src/fincept_terminal/migrations/*"]

[tool.coverage.report]
# Personal preference: only show files with less than 100% coverage to keep output focused
skip_covered = true
show_missing = true
# Personal preference: treat 70% as the minimum acceptable coverage threshold for this learning fork
# (upstream doesn't enforce a minimum; I want a safety net without being too strict)
fail_under = 70
